--- a/react-version/public/index.html
+++ b/react-version/public/index.html
@@ -26,7 +26,7 @@
     -->
 
         <!-- External CSS -->
-        <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+        <link rel="stylesheet" href="normalize-4.1.1.css" type="text/css" />
         
         <!-- external font from Google -->
         <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,400,600" rel="stylesheet">
